ignore workspace files

--- a/CPSC 315/03.01 - Privacy.md
+++ b/CPSC 315/03.01 - Privacy.md
@@ -12,3 +12,10 @@
 Example: Google Search
 - collect search-related habits to build profile
 
+**Credit Reports**
+Reports of one's histor yin assets, debts, loans, etc.
+* info sold to banks, credit card co's, lenders, etc.
+* poor results can block opportunities
+
+**Social media**
+Instances of criminal activity revealed this way
